improve ui for statistics. Add announcements.
